crates/icydb-core/tests/ui/db/canonical_row_not_public.rs
use icydb_core::db::CanonicalRow;

fn main() {
    let _ = std::mem::size_of::<CanonicalRow>();
}
